<resources>
    <string name="app_name">Shree Nath Ji Chilled Water</string>
    <string name="search">Search...</string>
    <string name="no_results_found">No Result Found</string>
    <string name="recent">Recents</string>
    <string name="mobile_prefix">+44</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="username_shop_name">User Name / Shop Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_info">User Information</string>
    <string name="amount">Amount</string>
    <string name="change">Change </string>
    <string name="change_your_mobile_number">Change your Login mobile number</string>
    <string name="change_mobile_number">Change mobile number</string>
    <string name="Wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="enter_phone_number">Enter Mobile Number</string>
    <string name="enter_your_number">Enter Your Mobile Number</string>
    <string name="enter_code">Enter code</string>
    <string name="address">Home / Shop Address</string>
    <string name="enter_address">Enter your Home address / Shop address</string>
    <string name="enter_name">Enter your Name / Shop Name</string>
    <string name="loading_wallet">Loading Wallet</string>
    <string name="rupeesSymbol">₹ </string>
    <string name="order_number">Order Number</string>
    <string name="date">Date</string>
    <string name="quantity">Bottle Quantity</string>
    <string name="paid_via">Paid via</string>
    <string name="trans_no">Transaction Number</string>
    <string name="resend_code">Resend Code</string>
    <string name="sending_code">Sending Code</string>
    <string name="note">Note</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="change_profile_image">Select new profile image</string>
    <string name="changing_img">Changing image…</string>
    <string name="shree_nath_ji_chilled_waters">Shree nath ji Chilled Waters</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="version">3</string>
    <string name="display_version">2.1</string>
    <string name="check_update">Checking for update</string>
    <string name="check_whether_a_new_update_is_available_to_download">Check whether a new update is available to download</string>
    <string name="bottles_id">Bottle Return ID</string>
    <string name="failed_to_connect">Failed to connect\nto server.</string>
    <string name="back">Back</string>
    <string name="default_notification_channel_id">1211212</string>
    <string name="error">Error occurred</string>
    <string name="retry">Retry</string>
    <string name="disable_notify_note">By disabling the notification you will not receive
        promotional notifications. But you will still receive some of the important notifications
        like new purchases and payments.</string>
    <string name="allow_notification">Allow notification</string>
    <string name="close">Close</string>
    <string name="verify_code_subtitle">Enter the OTP sent to</string>
    <string name="ok">OK</string>
    <string name="rate_app">Rate the app</string>
    <string name="feedback">Feedback</string>
    <string name="img_error_msg">Failed to load. Click here to retry</string>
    <string name="no_ratings">No ratings found</string>
    <string name="custom_user_info_screen">user_custom_admin_info_screen</string>
    <string name="fetch_interval">user_fetch_interval</string>


</resources>
