<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AppInfoActivity">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/black"
            android:onClick="backOnClicked"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back_black_24dp"
            />
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/appInfo"
            android:onClick="showAppInfo"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_round_info_24"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/topBar"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:textSize="17sp"
        android:id="@+id/version"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ProgressBar
                android:layout_width="20dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/progressbar"
                android:layout_gravity="center_vertical"
                android:layout_height="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:textSize="17sp"
        android:id="@+id/updateNote"
        android:text="Checking update"
        android:layout_height="wrap_content"/>
        </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="300dp"
        app:cornerRadius="15dp"
        android:id="@+id/updateBt"
        android:layout_marginTop="10dp"
        android:text="Update"
        android:visibility="gone"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/topBar"
        android:id="@+id/custom_views"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="300dp"
            android:text="@string/allow_notification"
            android:layoutDirection="rtl"
            android:textSize="16sp"
            android:id="@+id/notificationCheckbox"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/disable_notify_note"
             />

    </LinearLayout>

</RelativeLayout>